修复专利接口逆天bug